# fe-cli

./: .commitlintrc.js  .eslintrc.js  .gitignore  .prettierrc.js  .release-it.json  CHANGELOG.md  Cargo.toml  README.md  deploy.config.json  deploy.json  package.json  rollup.config.js  rollup.dev.config.js  tsconfig.json  备忘.md  项目搭建.md
constant/: index.js
core/: index.js
core/cli/: main.js
core/exec/: index.js
lib/: index.js  main.js
server/: project.json
src/: add.rs  deploy.rs  index.ts  lib.rs  list.rs  main.rs  main.ts  new.rs
src/cli/: mod.rs
src/cli/commands/: add.rs  deploy.rs  list.rs  mod.rs  new.rs
src/commands/: add.ts  create.ts  deploy.ts  getProjectTemplate.ts  init.ts  list.ts
src/common/: constant.ts
src/constant/: index.ts
src/core/: config.rs  error.rs  mod.rs  types.rs
src/enum/: baseClass.ts  index.ts  projectType.ts  updateType.ts
src/models/: command.ts  package.ts
src/utils/: download.ts  formatPath.ts  fs.rs  http.rs  index.ts  log.ts  mod.rs  npm.ts  request.ts  spinner.ts  template.rs  ui.rs
utils/: index.js  log.js
