[package]
name = "femaker"
authors = ["leslie"]
version = "0.1.1"
description = "简单优雅的前端脚手架"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
dialoguer = "0.11"
colored = "2"
git2 = "0.18.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ssh2 = "0.9"
